@@ -1,3 +1,10 @@
+2011-06-05 Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* GSFIFO.h:
+	* GSFIFO.m:
+	Use condition locks so that, if we have locking for both addition
+	and removal, we can signal threads waiting at the other end.
+
 2011-06-03 Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* GSTicker.m: Thread safety fixes ... make date storage volatile and
